--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
 <body>
     <header>
         <nav>
-            <a href="">WebStudio</a>
+            <a href="/index.html">WebStudio</a>
             <ul>
                 <li><a href=""></a>Studio</li>
                 <li><a href=""></a>Portfolio</li>
                 <li><a href=""></a>Contacs</li>
             </ul>
         </nav>
-            <adddres>
-                <ul>
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-                </ul>
-            </adddres>
+        
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com"></a>info@devstudio.com</li>
+                <li><a href="tel:+110001111111"></a>+11 (000) 111-11-11</li>
+            </ul>    
+        </address>    
+
+        
     </header>
     <main>
         <section>
@@ -30,6 +33,7 @@
         </section>
         <!--Preorities-->
         <section>
+            <h2 hidden>Preorities</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -56,7 +60,7 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="media/worker/mark_guerrero.jpg"
+                    <img src="./images/worker/mark_guerrero.jpg"
                     alt="mark_guerrero"
                     width="264"
                     height="260">
@@ -64,7 +68,7 @@
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="media/worker/tom_ford.jpg"
+                    <img src="./images/worker/tom_ford.jpg"
                     alt="tom_ford"
                     width="264"
                     height="260">
@@ -72,7 +76,7 @@
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="media/worker/camila_garci (1).jpg" 
+                    <img src="./images/worker/camila_garcia.jpg" 
                     alt="camila_garcia"
                     width="264"
                     height="260">
@@ -80,7 +84,7 @@
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="media/worker/daniel_wilson.jpg" 
+                    <img src="./images/worker/daniel_wilson.jpg" 
                     alt="daniel_wilson"
                     width="264"
                     height="260">
@@ -89,10 +93,11 @@
                 </li>
             </ul>
         </section>
-        <footer>
-        <a href="">WebStudio</a>
+    </main>
+    <footer>
+        <a href="/index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </footer>
-    </main>    
+    </footer>
+
 </body>
 </html>
