--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 <body>
     <header>
         <nav>
-            <a href="/index.html">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
-                <li><a href=""></a>Studio</li>
-                <li><a href=""></a>Portfolio</li>
-                <li><a href=""></a>Contacs</li>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacs</a></li>
             </ul>
         </nav>
         
         <address>
             <ul>
-                <li><a href="mailto:info@devstudio.com"></a>info@devstudio.com</li>
-                <li><a href="tel:+110001111111"></a>+11 (000) 111-11-11</li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>    
         </address>    
 
@@ -95,7 +95,7 @@
         </section>
     </main>
     <footer>
-        <a href="/index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
